--- a/docs/api/v1.5.0.md
+++ b/docs/api/v1.5.0.md
@@ -28,7 +28,9 @@ This is the versioned contract snapshot for API `1.5.0`.
 ## Canonical References
 
 - Full practical reference: `docs/api/reference-v1.md`
-- Migration 1.1 -> 1.5: `docs/migrations/v1.5.md`
+- API review record: `docs/api/review-v1.5.md`
+- Migration v1.1 -> v1.5.0: `docs/migrations/v1.1-to-v1.5.0.md`
+- Migration v1.5.0-rc.1 -> v1.5.0: `docs/migrations/v1.5.0-rc.1-to-v1.5.0.md`
 - Release/ops readiness: `docs/ops/release-readiness.md`
 
 
